test_data/typeerror/salt-50958.py
if twilio.__version__ > 5:
    TWILIO_5 = False